--- a/.github/workflows/master_poolzapplication.yml
+++ b/.github/workflows/master_poolzapplication.yml
@@ -23,15 +23,18 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd backbackun
           npm install
           npm run build --if-present
-          npm run test --if-present
+          
+      - name: Zip artifact for deployment
+        run: zip --symlinks -r release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,6 +44,7 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+  
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
@@ -53,4 +57,4 @@ jobs:
           app-name: 'poolzapplication'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E3672ECE82E4450E9EA78BD06D4851C5 }}
-          package: .
+          package: release.zip
